--- a/Proxy Server/index.html
+++ b/Proxy Server/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>6 Crossrecherche</title>
     <script>
@@ -11,7 +11,7 @@
 			var xhr = new XMLHttpRequest();
 			var url = document.URL;
 			xhr.open("POST", url, true);
-			xhr.setRequestHeader("Content-Type", "application/json");
+			xhr.setRequestHeader("Content-Type", "application/json; charset=utf-8");
 			xhr.send(data);
 			xhr.onreadystatechange = function () {
 				document.getElementById("status").innerHTML=xhr.status;
