--- a/Proxy Server/index.html
+++ b/Proxy Server/index.html
@@ -48,6 +48,7 @@
    		<input type="radio" name="engine" value="swisscovery"><label for="swisscovery">Swisscovery</label><br>
    		<input type="radio" name="engine" value="zora"><label for="zora">Zora</label><br>
    		<input type="radio" name="engine" value="boris"><label for="boris">Boris</label><br>
+   		<input type="radio" name="engine" value="fedlex"><label for="fedlex">Fedlex</label><br>
     
     <h3>type="search"</h3>
     	<p>term: <input type="text" id="term1"></p>
